[package]
name = "system-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
log.workspace = true

[build-dependencies]
anyhow.workspace = true
bindgen.workspace = true
cc.workspace = true
embed-resource.workspace = true
pkg-config.workspace = true

[dev-dependencies]
anyhow.workspace = true
chrono.workspace = true

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.98"
bindgen = "0.71.1"
cc = "1.2.20"
chrono = "0.4.41"
embed-resource = "3.0.2"
log = "0.4.27"
pkg-config = "0.3.32"

[workspace]
members = []
resolver = "3"
